network/ingressfolder/example2/ingress-wear-watch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
    paths:
    - path: /wear
      backend:
        serviceName: wear-service
        servicePort: 80
    - path: /watch
      backend:
        serviceName: watch-service
        servicePort: 80



# kubectl describe ingress ingress-wear-watch
# 1 rule 2 paths
# Default backend: default-http-backend:80   don't show error message, just say wrong path
